--- a/source/app/client/views/account/forgotpwd.html
+++ b/source/app/client/views/account/forgotpwd.html
@@ -12,13 +12,13 @@
 						<form name="form_forgotpwd" class="form-horizontal form-validation" data-ng-submit="submitForm()" data-ng-controller="forgotpwdCtrl">
 							<div class="form-group form-group-large">
 								<span class="icon-left glyphicon glyphicon-envelope"></span>
-								<input type="email" class="form-control" required ng-model="user.email" placeholder="メールアドレス">
+								<input type="text" class="form-control" required ng-model="user.email" placeholder="メールアドレス">
 							</div>
 							<div class="form-group">
 								<div class="alert alert-danger" data-ng-show="showMessage">{{message}}</div>
 							</div>
 							<div class="form-group">
-								<button type="submit" class="btn btn-primary btn-lg btn-block" data-ng-disabled="!canSubmit()">送信</button>
+								<button type="submit" class="btn btn-primary btn-lg btn-block" data-ng-disabled="!canSubmit()">リセット用のメールを再送信</button>
 							</div>
 						</form>
 
