--- a/source/www/app/views/chatroom/chatroom.html
+++ b/source/www/app/views/chatroom/chatroom.html
@@ -96,13 +96,13 @@
                 <button class="btn btn-default btn-circle btn-smile"><i class="icon-emotsmile"></i></button>
             </div>
             <div class="footer-btn-wrap">
-                <button class="btn btn-default btn-circle btn-file" multiple ng-file-select="onUploadFiles($files)"><i class="icon-paper-clip"></i></button>
+                <button class="btn btn-default btn-circle btn-file" multiple ng-file-select="onUploadFiles($files)" id="btn_upload"><i class="icon-paper-clip"></i></button>
             </div>
             <div class="footer-btn-wrap">
                 <button class="btn btn-default btn-circle btn-to" >TO</button>
             </div>
             <label class="item-input-wrapper">
-                <textarea ng-model="cmsg.content" value="" placeholder="メッセージを入力してください。(SHIFT + ENTERで送信)" required minlength="1" maxlength="5000" id="chat_ta" chat-input enter-submit="sendMessage()" esc="exitEdit()" ng-change="save_in_storage()"></textarea>
+                <textarea ng-model="cmsg.content" value="" placeholder="メッセージを入力してください。(SHIFT + ENTERで送信)" required minlength="1" maxlength="5000" id="chat_ta" chat-input enter-submit="sendMessage()" esc="exitEdit()" ng-change="save_in_storage()" ng-trim="false" rows='1'></textarea>
             </label>
             <div class="footer-btn-wrap">
                 <button class="btn btn-default btn-circle" type="submit" ng-disabled="!cmsg.content || cmsg.content === ''" ng-click="sendMessage()">
