サーバーの負荷問題の解決（memcahedの利用）

--- a/source/app/client/views/chatroom/chatroom.html
+++ b/source/app/client/views/chatroom/chatroom.html
@@ -74,7 +74,7 @@
             </div>
         </div>
     	<div id="chat_view" class="chat-view page chat-container transparent" scroll-top="prev()" scroll-bottom="next()" scroll="onScroll()">
-            <message-list id="messages" ng-if="loaded"></message-list>
+            <div id="messages"></div>
             <div id="scroll_bottom"></div>
     	</div>
         <div class="chat-send-files" id="file_bar">
