--- a/source/phonegap/www/css/style.css
+++ b/source/phonegap/www/css/style.css
@@ -619,8 +619,7 @@ div#emoticon_gallery .footer-btn {
     padding-left: 16px;
     padding-right: 10px;
     background-color: #f8f8f8;
-    min-height: 300px;
-    max-height: 400px;
+    height: 180px;
     border-top: solid 1px #dddddd;
 }
 
@@ -678,6 +677,7 @@ div#emoticon_gallery .footer-btn {
     position: absolute;
     bottom: 74px;
     width: 100%;
+    max-height: 180px;
 }
 
 .chat-send-file {
@@ -1275,4 +1275,8 @@ ul.rating li i {
 }
 .item-options .button .icon {
     vertical-align: middle;
+}
+
+.item-input-wrapper input {
+    width: 100%;
 }
