--- a/source/phonegap/www/templates/chatroom/preview_image.html
+++ b/source/phonegap/www/templates/chatroom/preview_image.html
@@ -10,4 +10,8 @@
             <div id="board" class="text-center"></div>
         </ion-scroll>
     </ion-content>
+    <ion-footer-bar align-title="left" class="bar-assertive">
+      <div id="preview_download" class="buttons">
+      </div>
+    </ion-footer-bar>
 </ion-modal-view>
