--- a/source/app/client/views/account/signin.html
+++ b/source/app/client/views/account/signin.html
@@ -11,7 +11,7 @@
 							<fieldset>
 								<div class="form-group form-group-large">
 									<span class="icon-left icon-envelope"></span>
-									<input type="text" class="form-control" required ng-model="user.email" placeholder="メールアドレス／ユーザーID">
+									<input type="text" class="form-control" required ng-model="user.login_id" placeholder="メールアドレス／ユーザーID">
 								</div>
 								<div class="form-group form-group-large">
 									<span class="icon-left icon-key"></span>
@@ -34,7 +34,7 @@
 							<a ng-href="{{api_url}}facebook/login?base={{base_url}}&redirect_url={{facebook_redirect_url}}&signup_url={{facebook_signup_url}}" class="btn btn-info btn-lg btn-block"><i class="fa fa-facebook-square"></i> Facebookログイン</a>
 						</div>
 						<div class="col-sm-6 col-xs-12">
-							<a ng-href="{{api_url}}google/login?base={{base_url}}&redirect_url={{google_redirect_url}}&signup_url={{google_signup_url}}" class="btn btn-danger btn-lg btn-block"><i class="fa fa-google"> Googleログイン</i></a>
+							<a ng-href="{{api_url}}google/login?base={{base_url}}&redirect_url={{google_redirect_url}}&signup_url={{google_signup_url}}" class="btn btn-danger btn-lg btn-block"><i class="fa fa-google"></i> Googleログイン</a>
 						</div>
 					</div>
 				</div>
