--- a/source/app/client/views/chatroom/chat_search.html
+++ b/source/app/client/views/chatroom/chat_search.html
@@ -14,13 +14,13 @@
 </div>
 <div class="modal-body">
     <div id="chat_search_view" class="row chat-container" scroll-top="prev()" scroll-bottom="next()">
-        <div ng-repeat="message in messages track by message.cmsg_id" class="message-wrapper">
-            <div id="chat_{{message.cmsg_id}}">
-                <img class="avartar left" ng-src="{{message.avartar}}" ng-if="message.show_avartar"/>
+        <div ng-repeat="message in messages track by message.cmsg_id" class="message-wrapper" ng-class="{'to-mine': isToMine(message)}">
+            <div id="chat_search_{{message.cmsg_id}}">
+                <img class="avartar left" ng-src="{{message.avartar}}"/>
 
-                <div class="chat-message left" ng-class="{'me': session.user_id == message.user_id, 'border-top': message.show_avartar, 'editing': message.editing}">
+                <div class="chat-message left border-top">
                     <div class="message-detail">
-                        <span ng-click="viewProfile(message)" class="user-name" ng-if="message.show_avartar">
+                        <span ng-click="viewProfile(message)" class="user-name">
                             {{message.user_name}}
                         </span> 
                         <span class="time">{{message.mission_name}} {{message.date_label}}</span>
@@ -34,12 +34,7 @@
             <ul class="button-group">
                 <li>
                     <button type="button" class="btn btn-default btn-xs btn-circle" title="このメッセージへ移動" ng-click="goMessage(message)"><i class="fa fa-fw fa-share"></i></button>
-                </li>                
-                <!--
-                <li>
-                    <button type="button" class="btn btn-default btn-xs btn-circle" title="引用" ng-click="quoteMessage(message)"><i class="fa fa-fw fa-quote-left"></i></button>
                 </li>
-                -->
             </ul>
 
             <div class="clear"></div>
