--- a/source/phonegap/www/templates/member/member_list.html
+++ b/source/phonegap/www/templates/member/member_list.html
@@ -1,14 +1,11 @@
 <ion-view view-title="メンバー">
-    <ion-header class="bar bar-header item-input-inset" ng-show="show_search_member">
+    <ion-header class="bar bar-header bar-positive item-input-inset" ng-show="show_search_member">
         <label class="item-input-wrapper">
             <i class="icon ion-ios-search placeholder-icon"></i>
             <input type="text" ng-model="search_home.text" placeholder="検索...">
         </label>
-        <button class="button button-clear" ng-click="close_search_member()">キャンセル</button>
+        <button class="button button-icon icon ion-ios-arrow-right" ng-click="close_search_member()"></button>
     </ion-header>
-    <ion-nav-buttons side="left">
-        <button menu-toggle="left" class="button button-icon icon ion-navicon" ng-click="toggleMenu()"></button>
-    </ion-nav-buttons>
     <ion-nav-buttons side="right">
         <button menu-toggle="right" class="button button-icon icon ion-ios-search" ng-click="open_search_member()"></button>
         <button menu-toggle="right" class="button button-icon icon ion-ios-personadd-outline" ng-click="addMember()" ng-if="canEditHomeMember()"></button>
