--- a/source/www/app/views/chatroom/chat_star.html
+++ b/source/www/app/views/chatroom/chat_star.html
@@ -6,10 +6,10 @@
     </header>
     <div id="chat_star_view" class="page chat-container" scroll-top="prev()" scroll-bottom="next()">
         <div ng-repeat="message in messages track by message.cmsg_id" class="message-wrapper" ng-class="{'to-mine': isToMine(message)}">
-            <div id="chat_{{message.cmsg_id}}">
+            <div id="chat_star_{{message.cmsg_id}}">
                 <img class="avartar avartar-sm left" ng-src="{{message.avartar}}"/>
 
-                <div class="chat-message left border-top" ng-class="{'me': session.user_id == message.user_id}">
+                <div class="chat-message left border-top">
                     <div class="message-detail">
                         <span ng-click="viewProfile(message)" class="user-name">
                             {{message.user_name}}
